# model-matrix

./: CMakeLists.txt  README.md  ruleset-examples.txt
src/: Application.cpp  Application.h  Viewport.h  grid.h  main.h  ruleset.h  ruleset_new.cpp  ruleset_new.h  simulation.cpp  simulation.h  tester.cpp  tester.h  themes.h
